InventoryManagement/force-app/src/objects/Material_Return__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Material Returns</relationshipLabel>
        <relationshipName>Material_Returns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Refunded__c</fullName>
        <label>Amount Refunded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Material Returns</relationshipLabel>
        <relationshipName>Material_Returns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inventory_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Location.IsInventoryLocation</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Material Returns</relationshipLabel>
        <relationshipName>Material_Returns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Request</label>
        <referenceTo>ProductRequest</referenceTo>
        <relationshipLabel>Material Returns</relationshipLabel>
        <relationshipName>Material_Returns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Repayment_Method__c</fullName>
        <label>Repayment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Credit</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Replacement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_Method__c</fullName>
        <label>Return Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Person</fullName>
                </value>
                <value>
                    <fullName>Shipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_Reason__c</fullName>
        <label>Return Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Canceled_WO</fullName>
                    <label>Canceled WO</label>
                </value>
                <value>
                    <fullName>Damaged</fullName>
                </value>
                <value>
                    <fullName>Defective</fullName>
                </value>
                <value>
                    <fullName>Duplicate Order</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Overstock</fullName>
                </value>
                <value>
                    <fullName>Wrong Item</fullName>
                </value>
                <value>
                    <fullName>Wrong Quantity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Returned_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Returned By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Material_Returns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Refunded</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Partner, Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Material Returns (Vendor)</relationshipLabel>
        <relationshipName>Material_Returns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Material Returns</relationshipLabel>
        <relationshipName>Material_Returns</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Material Return</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Product_Request__c</columns>
        <columns>Work_Order__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MR-{0000}</displayFormat>
        <label>Material Returns Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Returns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Refunded</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
ISPICKVAL(  Repayment_Method__c , &quot;Account Credit&quot;),
ISPICKVAL(  Repayment_Method__c , &quot;Refund&quot;)
),
ISPICKVAL( Status__c , &quot;Refunded&quot;),
ISBLANK( Amount_Refunded__c )
)</errorConditionFormula>
        <errorDisplayField>Amount_Refunded__c</errorDisplayField>
        <errorMessage>YOU NEED TO FILL OUT AMOUNT REFUNDED/CREDITED</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Returned</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( Status__c , &quot;Returned&quot;),
ISBLANK( Returned_By__c )
)</errorConditionFormula>
        <errorDisplayField>Returned_By__c</errorDisplayField>
        <errorMessage>YOU NEED TO FILL OUT WHO RETURNED THIS PRODUCT</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Shipped</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( Status__c , &quot;Shipped&quot;),
ISBLANK( Tracking_Number__c )
)</errorConditionFormula>
        <errorDisplayField>Tracking_Number__c</errorDisplayField>
        <errorMessage>YOU NEED TO FILL OUT TRACKING INFORMATION</errorMessage>
    </validationRules>
</CustomObject>